--- a/src/main/webapp/css/dashboard.css
+++ b/src/main/webapp/css/dashboard.css
@@ -29,9 +29,9 @@ body {
  */
 
 /* Hide for mobile, show later */
-.sidebar {
+/*.sidebar {
   display: none;
-}
+}*/
 @media (min-width: 768px) {
   .sidebar {
     position: fixed;
@@ -105,7 +105,7 @@ body {
  * Sign in form
  */
 .form-signin {
- max-width: 330px;
- padding: 15px;
- margin: 0 auto;
+  max-width: 330px;
+  padding: 15px;
+  margin: 0 auto;
 }
